--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,16 @@
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Import-Package>
+                            javax.servlet;resolution:=optional,
+                            javax.servlet.*;resolution:=optional,
+                            *
+                        </Import-Package>
+                    </instructions>
+                </configuration>
+
             </plugin>
         </plugins>
     </build>
